--- a/src/main/resources/templates/seduta/sedutaValidate.html
+++ b/src/main/resources/templates/seduta/sedutaValidate.html
@@ -233,7 +233,8 @@
 					RICHIESTA_INTEGRAZIONE: [[#{label.richiesta_integrazione}]],
 					RICHIESTA_PREAVVISO_RIGETTO: [[#{label.richiesta_preavviso_di_rigetto}]],
 					INS_ODG: [[#{label.ins_odg}]],
-					CONCLUSO: [[#{label.concluso}]]
+					CONCLUSO: [[#{label.concluso}]],
+					CANCELLATO: [[#{label.cancellato}]]
 				};
 
 			/*]]>*/
